--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,29 @@
-Source: apmplanner2
+Source: sqdr-apmplanner2
 Section: science
 Priority: extra
 Maintainer: APM Planner Developers <stephen_dade@hotmail.com>
-Vcs-Git: git://git.github.org/diydrones/apm_planner.git
-Build-Depends: git-buildpackage, debhelper, phonon, qt5-qmake, libqt5gui5, libqt5multimedia5, libqt5network5, libqt5opengl5-dev, libqt5positioning5, libqt5printsupport5, libqt5qml5, libqt5quick5, libqt5script5, libqt5svg5, libqt5sql5, libqt5webkit5, libqt5webkit5-qmlwebkitplugin | qml-module-qtwebkit, libqt5widgets5, libqt5xml5, libqt5declarative5, qtcreator, libsdl1.2-dev, libflite1, flite1-dev, build-essential, libopenscenegraph-dev, libssl-dev, libudev-dev, libc6, git, libsndfile1-dev, qt5-default, qtscript5-dev, libqt5webkit5-dev, libqt5serialport5-dev, libqt5svg5-dev, libsdl2-dev, python-serial, python-pexpect
-Homepage: https://github.com/diydrones/apm_planner
+Vcs-Git: git@github.com:SquadroneSystem/sqdr-apm_planner.git
+Build-Depends: debhelper,
+ qt5-qmake,
+ qtbase5-dev,
+ qtscript5-dev,
+ libqt5webkit5-dev,
+ libqt5serialport5-dev,
+ libqt5svg5-dev,
+ libqt5opengl5-dev,
+ qml-module-qtquick-controls,
+ zlib1g-dev,
+ libasound2-dev,
+ libsdl2-dev,
+ libsndfile-dev,
+Homepage: https://github.com/SquadroneSystem/sqdr-apm_planner
 Standards-Version: 3.9.4
 
-Package: apmplanner2
+Package: sqdr-apmplanner2
 Architecture: any
-Depends: ${shlibs:Depends}, qtdeclarative5-qtquick2-plugin | qml-module-qtquick2
+Depends: ${shlibs:Depends},
+ qml-module-qtquick2,
+ qml-module-qtquick-controls,
 Description: Ground station software for autonomous vehicles.
  A GUI ground control station for autonomous vehicles 
  using the MAVLink protocol.
